UI (bgs): remove hidden overflow on tabs to avoid tooltip clipping

--- a/core/src/css/component/battlegrounds/post-match/bgs-post-match-stats-tabs.component.scss
+++ b/core/src/css/component/battlegrounds/post-match/bgs-post-match-stats-tabs.component.scss
@@ -7,7 +7,9 @@
 	display: flex;
 	min-height: 0;
 	max-width: 100%;
-	overflow: hidden;
+	// overflow: hidden;
+	// For the tooltips
+	overflow: visible;
 }
 
 .stats {
